[package]
name = "enochecker"
version = "0.1.0"
authors = ["MMunier <marc@geomaps.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
serde = "*"
serde_json = "*"
actix-web = "^4.0.0-beta.6"
tokio = { version = "*", features = ["full"] }
async-trait = "0.1.48"
tracing = "*"
tracing-appender = "*"
tracing-core = "*"
tracing-subscriber = { version = "*", features = ["fmt", "chrono"] }
