[package]
name = "enochecker"
version = "0.1.0"
authors = ["MMunier <marc@geomaps.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "*"
actix-web = "4.*"
futures = "*"
serde = { version="*", features=["derive"] }
serde_json = "*"
tokio = { version = "1.*", features = ["full"] }
time = "0.3.*"
tracing = "*"
tracing-appender = "0.2.*"
tracing-core = "*"
tracing-subscriber = { version = "0.3.*", features = ["fmt", "time", "json"] }
