[package]
name = "examplechecker"
version = "0.1.0"
authors = ["MMunier <marc@geomaps.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enochecker = {path="../../"}
async-trait = "*"
actix-web = "^4.0.0-beta.5"
mongodb = "^2.0.0-alpha.1"
serde = "*"
tracing = "*"
